Add CI jobs for changes in Quadlet file
Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/.github/workflows/podman_container.yml
+++ b/.github/workflows/podman_container.yml
@@ -10,6 +10,7 @@ on:
       - 'plugins/modules/podman_container.py'
       - 'plugins/module_utils/podman/podman_container_lib.py'
       - 'plugins/module_utils/podman/common.py'
+      - 'plugins/module_utils/podman/quadlet.py'
       - 'plugins/modules/podman_container_info.py'
       - 'tests/integration/targets/podman_container/**'
     branches:
@@ -23,6 +24,7 @@ on:
       - 'plugins/modules/podman_container.py'
       - 'plugins/module_utils/podman/podman_container_lib.py'
       - 'plugins/module_utils/podman/common.py'
+      - 'plugins/module_utils/podman/quadlet.py'
       - 'plugins/modules/podman_container_info.py'
       - 'tests/integration/targets/podman_container/**'
   schedule:
