--- a/.github/workflows/podman_pod.yml
+++ b/.github/workflows/podman_pod.yml
@@ -9,6 +9,7 @@ on:
       - 'ci/playbooks/containers/podman_pod.yml'
       - 'plugins/module_utils/podman/podman_pod_lib.py'
       - 'plugins/module_utils/podman/common.py'
+      - 'plugins/module_utils/podman/quadlet.py'
       - 'plugins/modules/podman_pod.py'
       - 'plugins/modules/podman_pod_info.py'
       - 'tests/integration/targets/podman_pod/**'
@@ -22,6 +23,7 @@ on:
       - 'ci/playbooks/containers/podman_pod.yml'
       - 'plugins/module_utils/podman/podman_pod_lib.py'
       - 'plugins/module_utils/podman/common.py'
+      - 'plugins/module_utils/podman/quadlet.py'
       - 'plugins/modules/podman_pod.py'
       - 'plugins/modules/podman_pod_info.py'
       - 'tests/integration/targets/podman_pod/**'
