--- a/.github/workflows/podman_volume.yml
+++ b/.github/workflows/podman_volume.yml
@@ -8,6 +8,7 @@ on:
       - 'ci/run_containers_tests.sh'
       - 'ci/playbooks/containers/podman_volume.yml'
       - 'plugins/modules/podman_volume.py'
+      - 'plugins/module_utils/podman/quadlet.py'
       - 'tests/integration/targets/podman_volume/**'
     branches:
       - master
@@ -18,6 +19,7 @@ on:
       - 'ci/run_containers_tests.sh'
       - 'ci/playbooks/containers/podman_volume.yml'
       - 'plugins/modules/podman_volume.py'
+      - 'plugins/module_utils/podman/quadlet.py'
       - 'tests/integration/targets/podman_volume/**'
   schedule:
     - cron: 4 0 * * *  # Run daily at 0:03 UTC
