--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_ports.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_ports.yml
@@ -33,7 +33,7 @@
       - "4444:4444/tcp"
       - "1212:5555"
       - "8888:19191/udp"
-      - "1900:1900/udp"
+      - "19000:19000/udp"
       - "127.0.0.1:7671:7676/udp"
       - "127.0.0.1:12122:8876/udp"
       - "127.0.0.1:13122:8871/tcp"
@@ -41,6 +41,10 @@
       - "127.0.0.2:43423:8872/tcp"
       - "127.0.0.3:43423:8872"
       - "0.0.0.0:15674:7846"
+      - 127.0.0.1:20000-20010:20000-20010/udp
+      - 0.0.0.0:20000-20010:20000-20010/tcp
+      - "10000-10010:10000-10010/udp"
+      - "[::1]:3001-3003:3001-3003"
   register: test2
 
 - name: check test2
@@ -57,7 +61,7 @@
       - "4444:4444/tcp"
       - "1212:5555"
       - "8888:19191/udp"
-      - "1900:1900/udp"
+      - "19000:19000/udp"
       - "127.0.0.1:7671:7676/udp"
       - "127.0.0.1:12122:8876/udp"
       - "127.0.0.1:13122:8871/tcp"
@@ -65,6 +69,10 @@
       - "127.0.0.2:43423:8872/tcp"
       - "127.0.0.3:43423:8872"
       - "0.0.0.0:15674:7846"
+      - 127.0.0.1:20000-20010:20000-20010/udp
+      - 0.0.0.0:20000-20010:20000-20010/tcp
+      - "10000-10010:10000-10010/udp"
+      - "[::1]:3001-3003:3001-3003"
   register: test3
 
 - name: check test3
@@ -95,7 +103,7 @@
 
 - name: check test5
   assert:
-    that: test5 is changed
+    that: test5 is not changed
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
@@ -149,7 +157,7 @@
 
 - name: check test9
   assert:
-    that: test9 is not changed
+    that: test9 is changed
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
@@ -164,7 +172,7 @@
 
 - name: check test9a
   assert:
-    that: test9a is not changed
+    that: test9a is changed
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
@@ -213,7 +221,7 @@
 
 - name: check test11
   assert:
-    that: test11 is not changed
+    that: test11 is changed
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
@@ -226,7 +234,7 @@
 
 - name: check test11a
   assert:
-    that: test11a is not changed
+    that: test11a is changed
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
