--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_workdir.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_workdir.yml
@@ -34,13 +34,14 @@
 
 - name: check test2
   assert:
-    that: test2 is not changed
+    that: test2 is changed
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
+    workdir: /work
     command: 1h
   register: test3
 
@@ -122,7 +123,7 @@
 
 - name: check test9
   assert:
-    that: test9 is not changed
+    that: test9 is changed
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
@@ -184,7 +185,7 @@
 
 - name: check test11
   assert:
-    that: test11 is not changed
+    that: test11 is changed
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
