--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_ports.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_ports.yml
@@ -265,3 +265,87 @@
 - name: check test14
   assert:
     that: test14 is not changed
+
+- containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: alpine
+    name: idempotency1
+    state: present
+    ports:
+      - 20000-20010:20000-20010
+    command: sleep 1h
+  register: test15
+
+- name: check test15
+  assert:
+    that: test15 is changed
+
+- containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: alpine
+    name: idempotency1
+    state: present
+    ports:
+      - 20000-20010:20000-20010/tcp
+    command: sleep 1h
+  register: test16
+
+- name: check test16
+  assert:
+    that: test16 is not changed
+
+- containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: alpine
+    name: idempotency1
+    state: present
+    ports:
+      - 0.0.0.0:20000-20010:20000-20010/tcp
+    command: sleep 1h
+  register: test17
+
+- name: check test17
+  assert:
+    that: test17 is not changed
+
+- containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: alpine
+    name: idempotency1
+    state: present
+    ports:
+      - 127.0.0.1:20000-20010:20000-20010
+    command: sleep 1h
+  register: test18
+
+- name: check test18
+  assert:
+    that: test18 is changed
+
+- containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: alpine
+    name: idempotency1
+    state: present
+    ports:
+      - 127.0.0.1:20000-20010:20000-20010/udp
+    command: sleep 1h
+  register: test19
+
+- name: check test19
+  assert:
+    that: test19 is changed
+
+- containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: alpine
+    name: idempotency1
+    state: present
+    ports:
+      - 127.0.0.1::20000-20010/udp
+    command: sleep 1h
+  register: test20
+
+- name: check test20
+  assert:
+    that: test20 is changed
