--- a/tests/integration/targets/podman_pod/tasks/root-pod.yml
+++ b/tests/integration/targets/podman_pod/tasks/root-pod.yml
@@ -128,12 +128,14 @@
         ports:
           - "4444:4444/tcp"
           - "8888:19191/udp"
+          - "10000-10010:10000-10010/udp"
           - "127.0.0.1:7671:7676/udp"
           - "127.0.0.2:7671:7676/udp"
           - "127.0.0.1:13122:8871/tcp"
           - "127.0.0.1:43423:8872"
           - "0.0.0.0:44444:44445"
           - "[::1]:8743:8745"
+          - "[::1]:3000-3003:3000-3003"
       register: pod8_info
 
     - name: Check info
@@ -149,12 +151,14 @@
         ports:
           - "4444:4444/tcp"
           - "8888:19191/udp"
+          - "10000-10010:10000-10010/udp"
           - "127.0.0.1:7671:7676/udp"
           - "127.0.0.2:7671:7676/udp"
           - "127.0.0.1:13122:8871/tcp"
           - "127.0.0.1:43423:8872"
           - "0.0.0.0:44444:44445"
           - "[::1]:8743:8745"
+          - "[::1]:3000-3003:3000-3003"
       register: pod9_info
 
     - name: Check info
