Redesign idempotency for Podman Pod module
Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/tests/integration/targets/podman_pod/tasks/main.yml
+++ b/tests/integration/targets/podman_pod/tasks/main.yml
@@ -1153,6 +1153,9 @@
         - "container1"
         - "container2"
 
+- name: Test idempotency rootless pods
+  include_tasks: idempotency.yml
+
 - name: Test idempotency for root pods
   include_tasks: root-pod.yml
   vars:
